--- a/www_php/default/index.html
+++ b/www_php/default/index.html
@@ -8,6 +8,6 @@
     <body>
         <a href="/phpinfo.php">PHP info</a>
         <a href="/node">Node.js</a>
-        <a href="/mongo-express">Mongo-Express</a>
+        <a href="/mongo_express/">Mongo-Express</a>
     </body>
 </html>
